objects/TestForApexElement__c.object
<CustomObject>
    <fields>
        <fullName>ApexElement__c</fullName>
        <label>Apex Element</label>
        <referenceTo>ApexElements__c</referenceTo>
        <relationshipLabel>Tests For Apex Element</relationshipLabel>
        <relationshipName>Tests_For_Apex_Element</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tests For Apex Element</relationshipLabel>
        <relationshipName>Tests_For_Apex_Element</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestClass__c</fullName>
        <label>Test Class</label>
        <referenceTo>TestClass__c</referenceTo>
        <relationshipLabel>Tests For Apex Element</relationshipLabel>
        <relationshipName>Tests_For_Apex_Element</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test For Apex Element</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApexElement__c</columns>
        <columns>TestClass__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test_For_Apex_Element</fullName>
        <columns>NAME</columns>
        <columns>ApexElement__c</columns>
        <columns>TestClass__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test For Apex Element</label>
    </listViews>
    <nameField>
        <displayFormat>TFAE#{0000000}</displayFormat>
        <label>TFAE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests For Apex Element</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MixedProjects</fullName>
        <active>true</active>
        <errorConditionFormula>ApexElement__r.Project__c != Project__c || TestClass__r.Project__c != Project__c ||
ApexElement__r.Project__c != TestClass__r.Project__c</errorConditionFormula>
        <errorMessage>Project must be the same for Apex Element and Test Class</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>Project__c == null</errorConditionFormula>
        <errorMessage>Project is mandatory</errorMessage>
    </validationRules>
</CustomObject>